# oscam-patched-old

./: .gitignore  .travis.yml  CMakeLists.txt  CODING.RULES.txt  Makefile  README  README.config  README.dvbapi_protocol  cardlist.c  cardlist.h  config.h  config.sh  git-svn-diff.sh  globals.h  module-anticasc.c  module-cacheex.c  module-cacheex.h  module-camd33.c  module-camd35-cacheex.c  module-camd35-cacheex.h  module-camd35.c  module-camd35.h  module-cccam-cacheex.c  module-cccam-cacheex.h  module-cccam-data.h  module-cccam.c  module-cccam.h  module-cccshare.c  module-cccshare.h  module-constcw.c  module-csp.c  module-cw-cycle-check.c  module-cw-cycle-check.h  module-dvbapi-azbox.c  module-dvbapi-azbox.h  module-dvbapi-chancache.c  module-dvbapi-coolapi-legacy.c  module-dvbapi-coolapi.c  module-dvbapi-coolapi.h  module-dvbapi-mca.c  (+145 more)
cscrypt/: aes.c  aes.h  aescbc.c  aescbc.h  bn.h  bn_add.c  bn_exp.c  bn_lib.c  bn_mul.c  bn_print.c  des.c  des.h  fast_aes.c  fast_aes.h  i_cbc.c  i_ecb.c  idea_lcl.h  md5.c  md5.h  mdc2.c  mdc2.h  sha1.c  sha256.c  sha256.h
csctapi/: CMakeLists.txt  Makefile  atr.c  atr.h  cardreaders.h  icc_async.c  icc_async.h  ifd_cool.c  ifd_drecas.c  ifd_drecas.h  ifd_pcsc.c  ifd_phoenix.c  ifd_sc8in1.c  ifd_sci.c  ifd_smargo.c  ifd_smartreader.c  ifd_smartreader_types.h  ifd_stapi.c  ifd_stinger.c  io_serial.c  protocol_t0.c  protocol_t0.h  protocol_t1.c
ffdecsa/: CMakeLists.txt  ffdecsa.c  ffdecsa.h  ffdecsa_test.c  fftable.h  parallel_032_int.h  parallel_128_neon.h  parallel_128_sse2.h  stream.c
minilzo/: lzoconf.h
utils/: list_smargo.c
(+140 files in other folders)
